tests/golden/type_errors/array_reduce_generic_callback.cd
fun reducer<T>(acc: number, value: number): number {
  return acc;
}
reduce([1], 0, reducer);
