tests/golden/type_errors/array_reduce_generic_callback.err
Type error at 4:23: reduce cannot infer type parameter T
  reduce([1], 0, reducer);
                        ^
